@@ -160,6 +160,7 @@ public class SimpleFacets {
       DocSet base = searcher.getDocSet(qlist);
       if (rb.grouping() && rb.getGroupingSpec().isTruncateGroups()) {
         Grouping grouping = new Grouping(searcher, null, rb.getQueryCommand(), false, 0, false);
+        grouping.setGroupSort(rb.getGroupingSpec().getSortWithinGroup());
         if (rb.getGroupingSpec().getFields().length > 0) {
           grouping.addFieldCommand(rb.getGroupingSpec().getFields()[0], req);
         } else if (rb.getGroupingSpec().getFunctions().length > 0) {
